--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_CXX_STANDARD 98)
 
 add_executable(ex00 ex00/Zombie.cpp ex00/newZombie.cpp ex00/randomChump.cpp ex00/main.cpp)
 add_executable(ex01 ex01/Zombie.cpp ex01/newZombie.cpp ex01/randomChump.cpp ex01/main.cpp)
+add_executable(ex02 ex02/main.cpp)
