--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ add_executable(ex01 ex01/Zombie.cpp ex01/newZombie.cpp ex01/randomChump.cpp ex01
 add_executable(ex02 ex02/main.cpp)
 add_executable(ex03 ${EX03})
 add_executable(ex04 ex04/main.cpp)
+add_executable(ex05 ex05/main.cpp)
