--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,15 @@ cmake_minimum_required(VERSION 3.17)
 project(module01)
 
 set(CMAKE_CXX_STANDARD 98)
-file(GLOB EX03 ex03/*.cpp)
-add_executable(ex00 ex00/Zombie.cpp ex00/newZombie.cpp ex00/randomChump.cpp ex00/main.cpp)
-add_executable(ex01 ex01/Zombie.cpp ex01/newZombie.cpp ex01/randomChump.cpp ex01/main.cpp)
-add_executable(ex02 ex02/main.cpp)
+file(GLOB EX00 ex00/*.cpp ex00/*.hpp)
+file(GLOB EX01 ex01/*.cpp ex01/*.hpp)
+file(GLOB EX02 ex02/*.cpp ex02/*.hpp)
+file(GLOB EX03 ex03/*.cpp ex03/*.hpp)
+file(GLOB EX04 ex04/*.cpp ex04/*.hpp)
+file(GLOB EX05 ex05/*.cpp ex05/*.hpp)
+add_executable(ex00 ${EX00})
+add_executable(ex01 ${EX01})
+add_executable(ex02 ${EX02})
 add_executable(ex03 ${EX03})
-add_executable(ex04 ex04/main.cpp)
-add_executable(ex05 ex05/main.cpp ex05/Karen.cpp ex05/Karen.hpp)
+add_executable(ex04 ${EX04})
+add_executable(ex05 ${EX05})
